# MeterMaid

./: CHANGELOG.md  README.md
.github/workflows/: build.yml
MeterMaid/: CMakeLists.txt
MeterMaid/Source/: LockFreeFramePipe.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
MeterMaid/assets/: MeterMaid_UI_Demo.html
MeterMaid/docs/: GAP_ANALYSIS.md  GitHub_README_Copy.md  PRODUCTION_BLOCKERS.md  RELEASE_GATES.md  TECHNICAL_AUDIT.md
MeterMaid/scripts/: validate_plan.py
MeterMaid/tests/: ReferenceToneTest.cpp  reference_notes.md
docs/: README.md
metermaid_darpa_v08/: CMakeLists.txt  README.md
metermaid_darpa_v08/Source/: MeterEngine.h  MeterFrame.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp
metermaid_darpa_v08/config/: ui_contract.json
metermaid_darpa_v08/docs/: AUDIT_AND_EXECUTION_PLAN.md  FILE_BY_FILE_DARPA_AUDIT.md  NEXT_STEPS_LABELED.md  RELEASE_GATES.md
metermaid_darpa_v08/tests/: validation_matrix_template.csv
tests/: README.md
